project dependencies update